--- a/sections/existing.tex
+++ b/sections/existing.tex
@@ -2,14 +2,39 @@
 \section{Classifying existing optimization approaches}
 \label{ch:Existing}
 
-\begin{itemize}
-    \item Classifying a selection of existing optimization approaches using the proposed classification.
-\end{itemize}
+% TODO:
+% - Write a short explanation of each approach:
+%     - FUSION
+%     - Multi-Agent system
+%     - Learning revised models
+%     - Cloud performance and security
+%     - FIoT
+% - Classify each approach:
+%     - FUSION
+%     - Multi-Agent system
+%     - Learning revised models
+%     - Cloud performance and security
+%     - FIoT
 
-\paragraph*{Literature for this section:} \begin{itemize}
-    \item "FUSION: a framework for engineering self-tuning self-adaptive software systems" \cite{10.1145/1882291.1882296}
-    \item "A multi-agent systems approach to autonomic computing" \cite{tesauro2004multi}
-    \item "Learning revised models for planning in adaptive systems" \cite{6606552}
-    \item "Using a multi-agent system and artificial intelligence for monitoring and improving the cloud performance and security" \cite{GRZONKA20181106}
-    \item "FIoT: An agent-based framework for self-adaptive and self-organizing applications based on the Internet of Things" \cite{DONASCIMENTO2017161}
+% \begin{itemize}
+%     \item Classifying a selection of existing optimization approaches using the proposed classification.
+% \end{itemize}
+
+% \paragraph*{Literature for this section:} \begin{itemize}
+%     \item "FUSION: a framework for engineering self-tuning self-adaptive software systems" \cite{FUSION}
+%     \item "A multi-agent systems approach to autonomic computing" \cite{MultiAgentSystem}
+%     \item "Learning revised models for planning in adaptive systems" \cite{LearningRevisedModels}
+%     \item "Using a multi-agent system and artificial intelligence for monitoring and improving the cloud performance and security" \cite{ImprovingCloudPerformanceAndSecurity}
+%     \item "FIoT: An agent-based framework for self-adaptive and self-organizing applications based on the Internet of Things" \cite{FIoT}
+%     \item FESAS by Krupitzer? TODO: research
+% \end{itemize}
+
+\subparagraph*{FUSION}
+\begin{itemize}
+    \item Location:
+    \item Time:
+    \item Technique:
+    \item Purpose:
+    \item Approach:
+    \item Reflective Adaptation Control:
 \end{itemize}
