--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -26,9 +26,42 @@
 % \end{itemize}
 
 % TODO: What are Self-Adaptive Systems?}
-
 % TODO: Why are Self-Adaptive Systems useful?}
+The complexity of modern software systems is constantly growing.
+Most of this growth in complexity stems from the 
+"need to integrate several heterogeneous environments into corporate-wide computing systems, 
+and to extend that beyond company boundaries into the Internet" (Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}).
+\par
+This has reached a state where the 
+"complexity appears to be approaching the limits of human capability" (Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}).
+In combination with the uncertainty about a software systems future operations and environment,
+that the developers of such complex systems face, it becomes uneconomical to purely operate a system by human operators.
+\par
+From this the need for software systems which can autonomously manage themselves arises.
+In order to achieve this task of autonomous self-management, the system has to be able to:
+% MAPE-K -> Monitor, Analyze, Plan, Execute with Knowledge
+\begin{itemize}
+    \item detect faults and changes in its environment.
+    \item decide how to react to faults and changes in the systems environment.
+    \item make changes to itself.
+\end{itemize}
+To model these abilities Kephart and Chess developed 
+the MAPE-K (Monitor-Analyze-Plan-Execute with Knowledge) feedback loop \cite*{VisionOfAutonomicComputing}.
+First the system has to monitor itself and its environment. 
+The data, gathered by the monitoring step, has to be analyzed to detect changes and faults.
+If the analyzing step detects, that an adaptation is necessary, 
+the planning step plans which changes have to be made.
+After the changes have been planned, they need to be executed.
+All of this happens with Knowledge of the environment and the system.
+
+Software systems that can autonomously manage themselves are called Self-Adaptive Systems
+because of their ability to adapt themselves.
+
+This approach to managing big software systems has many advantages.
+% TODO: list advantages.
+
 
 % TODO: What are the limits of classical Self-Adaptive Systems?}
-
 % TODO: The need for optimizing Self-Adaptive Systems}
+While classical Self-Adaptive Systems can operate more complex systems than human operators,
+they also have disadvantages compared to human operators.
