--- a/seminar.tex
+++ b/seminar.tex
@@ -80,6 +80,13 @@
 %% The text is included from the following files:
 %% - sections/abstract
 
+% NOTE: Geplante Seitenaufteilung - mind. 15 Inhaltsseiten
+% Introduction: 2
+% Classification: 5
+% Proposal: 5
+% Existing: 2
+% Conclusion: 1
+
 \input{sections/abstract.tex}
 \input{sections/introduction.tex}
 \input{sections/sas_classification.tex}
