--- a/sections/existing.tex
+++ b/sections/existing.tex
@@ -22,12 +22,62 @@
 
 % \paragraph*{Literature for this section:} \begin{itemize}
 %     \item "FUSION: a framework for engineering self-tuning self-adaptive software systems" \cite{FUSION}
+%     \item "FIoT: An agent-based framework for self-adaptive and self-organizing applications based on the Internet of Things" \cite{FIoT}
 %     \item "A multi-agent systems approach to autonomic computing" \cite{MultiAgentSystem}
 %     \item "Learning revised models for planning in adaptive systems" \cite{LearningRevisedModels}
 %     \item "Using a multi-agent system and artificial intelligence for monitoring and improving the cloud performance and security" \cite{ImprovingCloudPerformanceAndSecurity}
-%     \item "FIoT: An agent-based framework for self-adaptive and self-organizing applications based on the Internet of Things" \cite{FIoT}
 %     \item FESAS by Krupitzer? TODO: research
 % \end{itemize}
+
+\subparagraph*{FUSION}
+by Elkhodary et al, 2010 \cite*{FUSION}  uses a learning and an adaptation cycle.
+The adaptation cycle corresponds to the Self-Adaptive part of the system
+and does not directly affect the learning cycle.
+The learning cycle is the optimization approach used by FUSION,
+it changes the behavior of the adaptation cycle.
+Both of these cycles continuously run in parallel to each other.
+\begin{itemize}
+    \item Location: Adaptation Control + Technique ?
+    \item Time: FUSION uses both the design and run time to perform optimizations.
+    The design time is used to generate an initial model for the learning cycle.
+    During the run time the learning cycle monitors adaptations
+    and updates the Knowledge Base to improve future adaptations.
+    \item Technique:
+    \item Purpose: The goal of FUSION is to 
+    \item Approach: FUSION acts as an external actor.
+    \item Reflective Adaptation Control: 
+\end{itemize}
+
+\subparagraph*{FIoT}
+by 
+\begin{itemize}
+    \item Location:
+    \item Time:
+    \item Technique:
+    \item Purpose:
+    \item Approach:
+    \item Reflective Adaptation Control:
+\end{itemize}
+
+\subparagraph*{FUSION}
+\begin{itemize}
+    \item Location:
+    \item Time:
+    \item Technique:
+    \item Purpose:
+    \item Approach:
+    \item Reflective Adaptation Control:
+\end{itemize}
+
+\subparagraph*{FUSION}
+\begin{itemize}
+    \item Location:
+    \item Time:
+    \item Technique:
+    \item Purpose:
+    \item Approach:
+    \item Reflective Adaptation Control:
+\end{itemize}
 
 \subparagraph*{FUSION}
 \begin{itemize}
