--- a/seminar.tex
+++ b/seminar.tex
@@ -81,11 +81,12 @@
 %% - sections/abstract
 
 % NOTE: Geplante Seitenaufteilung - mind. 15 Inhaltsseiten
-% Introduction: 2
-% Classification: 5
-% Proposal: 5
-% Existing: 2
-% Conclusion: 1
+% Chapter           Planned Current
+% Introduction:     2       1
+% Classification:   5       2.5
+% Proposal:         5       2.5
+% Existing:         2       0.5
+% Conclusion:       1       0
 
 \input{sections/abstract.tex}
 \input{sections/introduction.tex}
